Fix z-index issue

--- a/src/app.scss
+++ b/src/app.scss
@@ -13,7 +13,7 @@
 	margin: 0;
 }
 
-#wpbody-content{
+body:not(.graphiql-fullscreen) #wpbody-content{
 	position: sticky;
 	top: 32px;
 	margin-bottom: -32px;
